# regexrs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  a.py  bench.py  benchmark.py  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: build.yaml
py/re_rs/: __init__.pyi
src/: lib.rs
tests/: test_regexrs.py
